syntax = "proto3";
option go_package = ".;strategyV1";
package strategyV1;

service Strategy {
  rpc StartStrategy(StrategyReq) returns (CommonReplay) {}
  rpc UpdateStrategy(StrategyReq) returns (CommonReplay) {}
  rpc StopStrategy(StrategyReq) returns (CommonReplay) {}
}

message ServerReqBase {
  string requestIp = 1;    // 请求 IP
  uint32 instanceId = 2;   // 策略实例 ID
  uint32 strategyType = 3; // 策略类型(英文标识)
  string strategyName = 4; // 策略名称/描述
}

message StrategyReq {
  ServerReqBase commonMeta = 1;
  string jsonData = 2;
}

enum ErrorCode {
  OK = 0;
  INVALID_ARGUMENT = 1;
  INTERNAL_ERROR = 2;
  STRATEGY_NOT_FOUND = 3;
  AUTH_FAILED = 4;
  INSTANCE_ID_EMPTY = 5;
}

message CommonReplay {
  ErrorCode code = 1;
  string msg = 2;
  string jsonData = 3;
}